tests/spec/emit/snapshots/interop_struct_literal_option_to_pointer_struct.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/cb"
  
  fn main() {
    let inner = cb.Inner { Tag: "x" }
    let _ = cb.Outer {
      Slot: Some(&inner),
    }
  }
---
package main

import "example.com/cb"

func main() {
	inner := cb.Inner{Tag: "x"}
	_ = cb.Outer{Slot: &inner}
}
