tests/spec/emit/snapshots/interop_tuple_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:path"
  
  fn use_split(f: fn(string) -> (string, string), p: string) -> string {
    let (dir, file) = f(p)
    f"{dir}/{file}"
  }
  
  fn main() {
    let r = use_split(path.Split, "/foo/bar.txt")
    let _ = r
  }
---
package main

import "path"

func useSplit(f func(string) (string, string), p string) string {
	dir, file := f(p)
	return dir + "/" + file
}

func main() {
	r := useSplit(path.Split, "/foo/bar.txt")
	_ = r
}
