tests/spec/emit/snapshots/interop_tuple_direct_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:path"
  
  fn main() {
    let r = path.Split("/foo/bar.txt")
    let _ = r
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"path"
)

func main() {
	ret, ret_1 := path.Split("/foo/bar.txt")
	r := lisette.MakeTuple2(ret, ret_1)
	_ = r
}
