tests/spec/emit/snapshots/interop_tuple_explicit_return_concrete_in_go_interface_slot.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  
  struct Counter {
    count: int,
  }
  
  impl Counter {
    fn String(self) -> string {
      f"{self.count}"
    }
  }
  
  fn make_pair(c: Counter, positive: bool) -> (fmt.Stringer, int) {
    if positive {
      return (Counter { count: c.count + 1 }, c.count)
    }
    (c, c.count)
  }
---
package main

import "fmt"

type Counter struct {
	count int
}

func (c Counter) String() string {
	return fmt.Sprint(c.count)
}

func makePair(c Counter, positive bool) (fmt.Stringer, int) {
	if positive {
		return Counter{count: c.count + 1}, c.count
	}
	return c, c.count
}
