tests/spec/emit/snapshots/interop_tuple_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:path"
  
  fn main() {
    let f = path.Split
    let r = f("/foo/bar.txt")
    let _ = r
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"path"
)

func main() {
	f := path.Split
	ret, ret_1 := f("/foo/bar.txt")
	r := lisette.MakeTuple2(ret, ret_1)
	_ = r
}
