tests/spec/emit/snapshots/interop_tuple_return_pos.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:path"
  
  fn make_splitter() -> fn(string) -> (string, string) {
    path.Split
  }
  
  fn main() {
    let f = make_splitter()
    let r = f("/foo/bar.txt")
    let _ = r
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"path"
)

func makeSplitter() func(string) (string, string) {
	return path.Split
}

func main() {
	f := makeSplitter()
	ret, ret_1 := f("/foo/bar.txt")
	r := lisette.MakeTuple2(ret, ret_1)
	_ = r
}
