tests/spec/emit/snapshots/interop_tuple_slice_option_slot.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    let (xs, n) = aws.Make()
    fmt.Println(n)
    for x in xs {
      match x {
        Some(v) => fmt.Println(v),
        None => fmt.Println("none"),
      }
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ret, ret_1 := aws.Make()
	wrapped := make([]lisette.Option[string], len(ret))
	for i, v_1 := range ret {
		if v_1 != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v_1)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	tup := lisette.MakeTuple2(wrapped, ret_1)
	xs := tup.First
	n := tup.Second
	fmt.Println(n)
	for _, x := range xs {
		if x.Tag == lisette.OptionSome {
			fmt.Println(x.SomeVal)
		} else {
			fmt.Println("none")
		}
	}
}
