tests/spec/emit/snapshots/interop_typed_nil_interface_collection.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:go/ast"
  import "go:go/token"
  
  fn main() {
    let lit = ast.CompositeLit {
      Type: None,
      Lbrace: 0 as token.Pos,
      Elts: [],
      Rbrace: 0 as token.Pos,
      Incomplete: false,
    }
    let elts = lit.Elts
    for elt in elts {
      match elt {
        Some(e) => fmt.Println(e.Pos()),
        None => fmt.Println("nil"),
      }
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"go/ast"
	"go/token"
)

func main() {
	src := []lisette.Option[ast.Expr]{}
	unwrapped := make([]ast.Expr, len(src))
	for i, v := range src {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	lit := ast.CompositeLit{
		Type:       nil,
		Lbrace:     token.Pos(0),
		Elts:       unwrapped,
		Rbrace:     token.Pos(0),
		Incomplete: false,
	}
	raw := lit.Elts
	wrapped := make([]lisette.Option[ast.Expr], len(raw))
	for i_1, v_1 := range raw {
		if !lisette.IsNilInterface(v_1) {
			wrapped[i_1] = lisette.MakeOptionSome[ast.Expr](v_1)
		} else {
			wrapped[i_1] = lisette.MakeOptionNone[ast.Expr]()
		}
	}
	elts := wrapped
	for _, elt := range elts {
		if elt.Tag == lisette.OptionSome {
			fmt.Println(elt.SomeVal.Pos())
		} else {
			fmt.Println("nil")
		}
	}
}
