tests/spec/emit/snapshots/interop_typed_nil_interface_result_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:os"
  
  fn main() {
    let info = os.Stat("/tmp")
    match info {
      Ok(i) => fmt.Println(i.Size()),
      Err(e) => fmt.Println(e),
    }
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"io/fs"
	"os"
)

func main() {
	ret, ret_1 := os.Stat("/tmp")
	var result lisette.Result[fs.FileInfo, error]
	if ret_1 != nil {
		result = lisette.MakeResultErr[fs.FileInfo, error](ret_1)
	} else if lisette.IsNilInterface(ret) {
		result = lisette.MakeResultErr[fs.FileInfo, error](errors.New("unexpected nil"))
	} else {
		result = lisette.MakeResultOk[fs.FileInfo, error](ret)
	}
	info := result
	if info.Tag == lisette.ResultOk {
		fmt.Println(info.OkVal.Size())
	} else {
		fmt.Println(info.ErrVal)
	}
}
