tests/spec/emit/snapshots/interop_typed_nil_interface_single_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:context"
  import "go:fmt"
  
  fn main() {
    let ctx = context.Background()
    match ctx.Err() {
      Some(e) => fmt.Println(e.Error()),
      None => fmt.Println("no error"),
    }
  }
---
package main

import (
	"context"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ctx := context.Background()
	raw_1 := ctx.Err()
	option_2 := lisette.OptionFromNilable[error](raw_1, lisette.IsNilInterface(raw_1))
	if option_2.Tag == lisette.OptionSome {
		fmt.Println(option_2.SomeVal.Error())
	} else {
		fmt.Println("no error")
	}
}
